[gd_scene load_steps=10 format=3 uid="uid://frtrukkat3uk"]

[ext_resource type="Texture2D" uid="uid://qaqr2ks5kf6f" path="res://assets/ui/fight_ui/description_texture.png" id="1_u8uvb"]
[ext_resource type="Script" path="res://scripts/UI/character_result_display.gd" id="2_16uq0"]
[ext_resource type="Texture2D" uid="uid://dfsimsey84bkf" path="res://assets/chars/male/male_13.png" id="2_mddqo"]
[ext_resource type="Texture2D" uid="uid://ckxik8lsk2na5" path="res://assets/ui/party_ui/rect_frame.png" id="3_y7d1d"]
[ext_resource type="FontFile" uid="uid://chxj0wt4i4epv" path="res://assets/fonts/lato/Lato-Regular.ttf" id="4_4rfrr"]

[sub_resource type="LabelSettings" id="LabelSettings_5o4xq"]
font = ExtResource("4_4rfrr")
font_size = 30
font_color = Color(0.783523, 0.783523, 0.783523, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bbdgg"]
font = ExtResource("4_4rfrr")
font_size = 25
font_color = Color(0.625597, 0.625597, 0.625597, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ljopw"]
font = ExtResource("4_4rfrr")
font_size = 25
font_color = Color(0.627451, 0.627451, 0.627451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eglbp"]
font = ExtResource("4_4rfrr")
font_size = 25
font_color = Color(0.627451, 0.627451, 0.627451, 1)

[node name="character_result_display" type="TextureRect"]
custom_minimum_size = Vector2(620, 230)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -148.0
offset_right = 371.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u8uvb")
expand_mode = 1
script = ExtResource("2_16uq0")

[node name="hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -75.0
offset_right = 317.5
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="portrait" type="ColorRect" parent="hbox"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.509804, 0.313726, 0.160784, 1)

[node name="avatar_portrait" type="TextureRect" parent="hbox/portrait"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -75.0
offset_right = 62.4268
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mddqo")
expand_mode = 3

[node name="frame" type="TextureRect" parent="hbox/portrait"]
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 155.0
offset_bottom = 156.0
texture = ExtResource("3_y7d1d")
expand_mode = 1
stretch_mode = 4

[node name="info_vbox" type="VBoxContainer" parent="hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="name_label" type="Label" parent="hbox/info_vbox"]
layout_mode = 2
text = "Dummy_Character"
label_settings = SubResource("LabelSettings_5o4xq")

[node name="xp_gain_label" type="Label" parent="hbox/info_vbox"]
layout_mode = 2
text = "+1500XP (Level Up ! (Lv. 9 -> 10))"
label_settings = SubResource("LabelSettings_bbdgg")

[node name="xp_progress_label" type="Label" parent="hbox/info_vbox"]
layout_mode = 2
text = "XP: 500 / 4500"
label_settings = SubResource("LabelSettings_ljopw")

[node name="skill_points_available_label" type="Label" parent="hbox/info_vbox"]
layout_mode = 2
text = "Skill Points Available: 2 (+1 !)"
label_settings = SubResource("LabelSettings_eglbp")
